Bug 268988 - "control-alt-delete" brings up shutdown dialog, but it can't be activated by keyboard
Summary: "control-alt-delete" brings up shutdown dialog, but it can't be activated by ...
Status: RESOLVED FIXED
Alias: None
Product: kdm
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdm bugs tracker
URL:
Keywords:
: 321070 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-20 21:03 UTC by Christian Trippe
Modified: 2015-08-04 18:11 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Trippe 2011-03-20 21:03:51 UTC
Version:           0.1 (using KDE 4.6.1) 
OS:                Linux

When in KDM, "control-alt-delete" brings up the shutdown dialog, but it can't
be activated by the keyboard -- it has no focus! The dialog activation requires
the use of a pointing device to change the focus. 

This bug was initially reported at https://bugzilla.novell.com/show_bug.cgi?id=679964

Reproducible: Always




OS: Linux (x86_64) release 2.6.37.1-1.2-desktop
Compiler: gcc
Comment 2 Andrei ILIE 2011-04-01 14:20:43 UTC
This seems to affect more than KDM:

- after logging in in KDE 4.5.5, Alt+F1 doesn't open the KickOff Menu anymore (Alt+F2 seems to still be working)

- when needing privilege escalation, in most cases the root passord dialog appears beneath the open windows, so you have to raise it manually

is this a QT issue ?
Comment 3 Bernhard M. Wiedemann 2011-04-26 10:24:05 UTC
@Andrei: the Alt-F1 is just a config option - see
https://bugzilla.novell.com/show_bug.cgi?id=637583
Comment 4 Oswald Buddenhagen 2011-05-14 11:37:04 UTC
works for me with current master (kde 4.7 pre), qt 4.7.3, x server 1.9.99.901.
superficially this sounds like a duplicate of bug 234362, but it's lacking the trigger "open popup menu". but for completeness, does the behavior change if you activate the dialog via the menu (either via keyboard or with mouse)?
in any case, a problem outside of kdm's control seems most likely.
Comment 5 Christian Trippe 2011-05-15 19:50:48 UTC
(In reply to comment #4)
> but for completeness, does the behavior change if
> you activate the dialog via the menu (either via keyboard or with mouse)?

Yes, it is the same, if I activate the dialog via mouse or keyboard (using KDE 4.6.3, Qt 4.7.3, X-server 1.9.3).
Comment 6 Jon Nelson 2011-08-04 16:48:30 UTC
From comment 4 from the openSUSE bug:




As a note, I can add that by setting

  GrabInput=Always

in "/usr/share/kde4/config/kdm/kdmrc" (default is not to have it set and this
using "IfNoAuth"), the authentication dialog gets focused and one can enter the
password.
On my system this works quite nicely, but whether this is a general usable
"work-around", I cannot say.  After all, then comments in "kdmrc" claims that
such a setting might cause problems:

# Whether to grab keyboard and mouse while the greeter is visible. Grabs
# may improve security, but make on-screen keyboards, etc. unusable.
Comment 7 Jon Nelson 2011-08-04 16:48:58 UTC
How does one re-open a bug? THis is *still* an issue with 4.7.0
Comment 8 Rex Dieter 2012-02-13 14:25:20 UTC
I can confirm comment #4 that either
GrabInput=Always
or
GrabServer=true
seems to help the issue for me.
Comment 9 J Brauchle 2012-09-28 11:25:05 UTC
I can confirm that this is STILL a problem in 4.9.1 ....
Comment 10 Andrei ILIE 2012-10-01 09:59:42 UTC
Please reopen - this bug report is valid against KDE 4.9.1 :(
Comment 11 Oswald Buddenhagen 2013-06-14 13:30:24 UTC
*** Bug 321070 has been marked as a duplicate of this bug. ***
Comment 12 realnobody 2014-05-09 10:46:27 UTC
This is still an issue with version 1.4 / KDE 4.13.0. I was about reporting this (mentioned here for search engines): The kdm shutdown pupup (buttons: shutdown, restart, cancel) is not keyboard-controllable. At least it is not keyboard-controllable by the usual keys (arrow keys, tab, enter).

Fine that there is a workaround, but the UI should be controllable by keyboard. At least such really basic and important functionality. So it would really be nice if someone finds a fix to this for integration into the default code and settings.

If the keyboad focus for the user/pw fields is an problem, what about the shutdown menu temproraryly replacing the login field (i.e. no popup - which has a non-fitting GUI look anyway...)?
Comment 13 Wolfgang Bauer 2015-08-04 17:53:33 UTC
Git commit 46f1055ffdcd2e068296576a7824012f42e9b9a8 by Wolfgang Bauer.
Committed on 04/08/2015 at 17:51.
Pushed by wbauer into branch 'KDE/4.11'.

Fix input focus for KDM's dialogs when GrabInput is not active

Commit d03df616 made input grabbing optional in KDM. But without it,
input dialogs do not correctly get focus and keyboard shortcuts don't
work.

KDM does call activateWindow() on opened dialogs, but this doesn't seem
to have the desired effect without a window manager running. And if you
hover the mouse over a widget, it visually looks like it has focus, but
often it doesn't accept input anyway.

This patch sets the input focus via XSetInputFocus() instead, this also
has the positive side-effect that a widget retains the focus if you move
the mouse away.
Related: bug 338018
REVIEW: 121755

M  +2    -2    kdm/kfrontend/kfdialog.cpp

http://commits.kde.org/kde-workspace/46f1055ffdcd2e068296576a7824012f42e9b9a8