Fix input focus for KDM's dialogs when GrabInput is not active

Commit d03df616 made input grabbing optional in KDM. But without it,
input dialogs do not correctly get focus and keyboard shortcuts don't
work.

KDM does call activateWindow() on opened dialogs, but this doesn't seem
to have the desired effect without a window manager running. And if you
hover the mouse over a widget, it visually looks like it has focus, but
often it doesn't accept input anyway.

This patch sets the input focus via XSetInputFocus() instead, this also
has the positive side-effect that a widget retains the focus if you move
the mouse away.

BUG: 268988
BUG: 338018
REVIEW: 121755